--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,17 +1,10 @@
-{% extends "base.html" %}
+{% extends 'layouts/base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
 {% block title %}Intranet - Post{% endblock %}
 
-{% block head %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript" ></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-{{ super() }}
-{% endblock %}
-
-{% block page_content %}
+{% block body %}
 <div id="moderate-comments">
 	{% if current_user.can(Permission.ADMINISTER) or current_user == post.author %}
 	<a href="{{ url_for('main.moderate', id=post.id) }}">
@@ -19,7 +12,9 @@
 	</a>
 	{% endif %}
 </div>
+
 {% include '_posts.html' %}
+<br>
 <div id="comment">
     <h2>Comments<h2>
     {% if current_user.can(Permission.COMMENT) %}
