--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -1,6 +1,6 @@
-<ul class="posts">
 {% if page_posts[0] %}
 {% for post in page_posts %}
+<div class="well">
     <h1>{{ post[1] }}</h1>
     <h10>{{ post[2] }}</h10>
     <br>
@@ -33,8 +33,9 @@
                 <span class="label label-danger">Delete</span>
             </a>
         {% endif %}
-    </div>
     <br>
+    </div>
+</div>
 {% endfor %}
 {% else %}
     <h4>There are no matching results.</h4>
