--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,13 +1,11 @@
-{% extends "base.html" %}
+{% extends "layouts/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Register{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
-    <h2>Register</h2>
-</div>
-<div id="page-body">
+{% block body %}
+<div class="well">
+    <h2>Register</h2><br>
     {{ wtf.quick_form(form) }}
 </div>
 </div>
