--- a/app/templates/delete_comment.html
+++ b/app/templates/delete_comment.html
@@ -1,16 +1,9 @@
-{% extends "base.html" %}
+{% extends 'layouts/base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Intranet - Delete Comment{% endblock %}
 
-{% block head %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript" ></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-{{ super() }}
-{% endblock %}
-
-{% block page_content %}
+{% block body %}
 <div class="page-header">
     <h2>Delete Comment</h2>
 </div>
