--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -1,10 +1,14 @@
-{% extends "base.html" %}
+{% extends 'layouts/base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Intranet - Edit Post{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/selectize.css') }}" type="text/css">
+{% endblock %}
+
+{% block body %}
+<div class="well">
     <h2>Edit Post</h2>
 </div>
 <div id="page-body">
