--- a/app/templates/enfg.html
+++ b/app/templates/enfg.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends 'layouts/base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block head %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript" ></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-{{ super() }}
-
+{% block scripts %}
 <script type="text/javascript">
     function open_fun() {
         document.getElementById('link').innerHTML = "<a " +
@@ -21,7 +16,7 @@
     function clo_fun() {
         document.getElementById('link').innerHTML = "<a " +
             "class='btn btn-default' href='javascript:open_fun()'>All " +
-            "Boros</a>";
+            "Boroughs</a>";
 {#        var aa = document.querySelectorAll("input[type=checkbox]");#}
         var aa = document.getElementsByName("borough");
         for (var i = 0; i < aa.length; i++){
@@ -45,8 +40,8 @@
 
 {% block title %}Intranet - ENFG{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
+{% block body %}
+<div class="well">
     <h2>Easy Not Found Generator</h2>
 </div>
 
@@ -65,10 +60,11 @@
     {{ form.borough.label }}<br />
     {{ form.borough(class="form-control") }}
     <div id='link'>
-        <a class="btn btn-default" href='javascript:open_fun()'>All Boros</a>
+        <a class="btn btn-default" href='javascript:open_fun()'>All Boroughs</a>
     </div>
     <br />
     {{ form.signature.label }} {{ form.signature() }}<br /><br />
     {{ form.submit(class="btn btn-default btn-lg") }}
 </form>
 {% endblock %}
+
