--- a/app/templates/lmt.html
+++ b/app/templates/lmt.html
@@ -1,21 +1,14 @@
-{% extends "base.html" %}
+{% extends 'layouts/base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Intranet - LMT{% endblock %}
 
-{% block head %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript" ></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-{{ super() }}
-{% endblock %}
-
-{% block page_content %}
-<div class="page-header">
+{% block body %}
+<div class="well">
     <h2>Labor Management Team</h2>
 </div>
 
-<div id="page-body">
+<div class="well">
 	<h4><b>Meeting Minutes</b>
 	<br><br>
 	- <a href="{{ url_for('static', filename='files/LMT_12_17_2015.pdf') }}">12-17-2015</a><br>
