--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -18,9 +18,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}Intranet{% endblock %} - Project</title>
-    <meta name="description" content="Fbone (Flask bone) is a Flask (Python microframework) template/bootstrap/boilerplate application.">
-    <meta name="author" content="Wilson Xu">
+    <title>{% block title %}Intranet{% endblock %}</title>
+    <meta name="description" content="NYC DORIS Intranet">
     <!-- To ensure proper rendering and touch zooming, add the viewport meta tag to your <head>. -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
