--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -4,6 +4,7 @@
 
 {% for comment in allComments %}
 
+<div class="well">
 <div id="comment-body">
     {% if comment.disabled %}
     <p><i>This comment has been disabled by a moderator.</i></p>
@@ -25,7 +26,6 @@
             </div>
         {% endif %}
         </h4>
-
         {% if current_user == comment.author or current_user.is_administrator() %}
         <a href="{{ url_for('.edit_comment', id=comment.id) }}">
             <span class="label label-primary">Edit</span>
@@ -44,10 +44,13 @@
     <a class="label label-danger" href="{{ url_for('.moderate_disable',
         id=comment.id, page=page) }}">Disable</a>
     {% endif %}
-</div>
 {% endif %}
+</div>
+</div>
 {% endfor %}
 
 {% else %}
+<div class="well">
 <h4>There are currently no comments for this post.</h4>
+</div>
 {% endif %}
