Fixed formatting of html files, fixed broken link for home, fixed flash message css

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -69,10 +69,16 @@ form li {
     text-decoration: none;
 }
 
+#comment-body > a:hover {
+	text-decoration: none;
+}
+
 #moderate-comments {
 	padding-bottom: 15px;
 }
 
-/*#flash_message_container {
-	background-color: ;
-}*/
+#flash_message_container {
+	color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+}
