--- a/app/templates/delete_comment.html
+++ b/app/templates/delete_comment.html
@@ -4,10 +4,10 @@
 {% block title %}Intranet - Delete Comment{% endblock %}
 
 {% block body %}
-<div class="page-header">
+<div class="well">
     <h2>Delete Comment</h2>
 </div>
-<div id="page-body">
+<div class="well">
     <h4>Are you sure you want to delete this comment?</h4>
     {{ wtf.quick_form(form) }}
 </div>
