--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -56,7 +56,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="{{ url_for('main.index') }}">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quick Links<span class="caret"></span></a>
                             <ul class="dropdown-menu">
