--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -4,7 +4,7 @@
 {% block title %}Intranet - Comment Moderation{% endblock %}
 
 {% block body %}
-<div class="page-header">
+<div class="well">
     <h2>Comment Moderation</h2>
 </div>
 {% set moderate = True %}
