Fixed problem where empty tag would be added to tag list

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -73,6 +73,7 @@
                                 <li><a href="{{ url_for('main.lmt') }}">Labor Management Team</a></li>
                                 <li><a href="{{ url_for('main.archives') }}">Municipal Archives</a></li>
                                 <li><a href="http://www.nyc.gov/html/records/html/home/home.shtml">Department of Records</a></li>
+                                <li><a href="http://egov.nycnet/dor/mrmd/index.html">Municipal Records Management Division</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
