--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -8,7 +8,7 @@
     <h2>Comment Moderation</h2>
 </div>
 {% set moderate = True %}
-<div id="page-body">
+<div class="well">
 {% include '_comments.html' %}
 </div>
 {% endblock %}
