--- a/app/templates/delete_post.html
+++ b/app/templates/delete_post.html
@@ -4,10 +4,10 @@
 {% block title %}Intranet - Delete Post{% endblock %}
 
 {% block body %}
-<div class="page-header">
+<div class="well">
     <h2>Delete Post</h2>
 </div>
-<div id="page-body">
+<div class="well">
     <h4>Are you sure you want to delete this post?</h4>
     {{ wtf.quick_form(form) }}
 </div>
