--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -54,7 +54,7 @@
                     </button>
                     <a class="navbar-brand" href="{{ url_for('main.index') }}">Intranet</a>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse">
+                <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="{{ url_for('main.index') }}">Home</a></li>
                         <li class="dropdown">
@@ -69,10 +69,10 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="{{ url_for('main.mis') }}">Management and Information Services</a></li>
-                                <li><a href="{{ url_for('main.lmt') }}">Labor Management Team</a></li>
-                                <li><a href="{{ url_for('main.archives') }}">Municipal Archives</a></li>
                                 <li><a href="http://www.nyc.gov/html/records/html/home/home.shtml">Department of Records</a></li>
+                                <li><a href="{{ url_for('main.lmt') }}">Labor Management Team</a></li>
+                                <li><a href="{{ url_for('main.mis') }}">Management and Information Services</a></li>
+                                <li><a href="{{ url_for('main.archives') }}">Municipal Archives</a></li>
                                 <li><a href="http://egov.nycnet/dor/mrmd/index.html">Municipal Records Management Division</a></li>
                             </ul>
                         </li>
@@ -80,11 +80,11 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ url_for('main.enfg') }}">Easy Not Found Generator</a></li>
-                                <li><a href="{{ url_for('main.eeo') }}">Equal Employment Opportunity</a></li>
-                                <li><a href="{{ url_for('main.agencypolicies') }}">Policies and Procedures</a></li>
                                 <li><a href="http://www1.nyc.gov/site/olr/index.page">Employee Benefits</a></li>
+                                <li><a href="{{ url_for('main.eeo') }}">Equal Employment Opportunity</a></li>
                                 <li><a href="https://www.nycers.org/(S(m4z1oy554pem3oudryveam55))/index.aspx">NYCERS</a></li>
                                 <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml">Personal Service Bulletins</a></li>
+                                <li><a href="{{ url_for('main.agencypolicies') }}">Policies and Procedures</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
@@ -109,7 +109,10 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ current_user.username }}<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="{{ url_for('main.profile') }}">User Profile</a></li>
+                                <li><a href="{{ url_for('main.profile', username=current_user.username) }}">User Profile</a></li>
+                                {% if current_user.is_administrator %}
+                                <li><a href="{{ url_for('main.edituserroles') }}">User Roles</a></li>
+                                {% endif %}
                                 <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
                             </ul>
                         </li>
