--- a/app/templates/eeo.html
+++ b/app/templates/eeo.html
@@ -16,6 +16,7 @@
 	- <a href="{{ url_for('static', filename='files/eeo_discrimination_complaint_procedures.pdf') }}">EEO Discrimination Complaint Procedures</a><br>
 	- <a href="{{ url_for('static', filename='files/about_eeo_booklet.pdf') }}">About EEO Booklet</a><br>
 	- <a href="{{ url_for('static', filename='files/55A_Booklet_final.pdf') }}">55A Booklet Final</a><br>
+	- <a href="{{ url_for('static', filename='files/EO16Poster_FINAL.pdf') }}">Executive Order 16 Poster</a><br>
 	</h4>
 </div>
 {% endblock %}
