--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -38,6 +38,7 @@
     Username: {{ user }}<br>
     Role: {{ role }}<br>
 	Email: {{ email }}<br>
+    Division: {{ division }}<br>
 	{% if role == 'Administrator' or role == 'Director' %}
 	Number of Posts: {{ posts }}<br>
 	{% endif %}
