--- a/app/templates/edituserinfo.html
+++ b/app/templates/edituserinfo.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="well">
-    <h2>Edit User Roles</h2>
+    <h2>Update User Information</h2>
 </div>
 
 <div class="well">
@@ -38,18 +38,6 @@
             <button type="submit" title="submit_director_role" class="ui button">Submit</button>
         </div>
     </div>
-    <h4>Delete Account</h4>
-        <select name="select_account" class="ui compact selection dropdown">
-            <option value="">Accounts</option>
-            {% for user in users %}
-            <option value="{{ user.id }}">{{ user.username }}</option>
-            {% endfor %}
-        </select>
-    <div id="requestButton" class="control-group">
-        <div>
-            <button type="submit" title="delete_account" class="ui button">Delete</button>
-        </div>
-    </div>
     <h4>Division Change</h4>
         <select name="select_user" class="ui compact selection dropdown">
             <option value="">Employees</option>
@@ -66,6 +54,18 @@
     <div id="requestButton" class="control-group">
         <div>
             <button type="submit" title="submit_division" class="ui button">Submit</button>
+        </div>
+    </div>
+    <h4>Delete Account</h4>
+        <select name="select_account" class="ui compact selection dropdown">
+            <option value="">Accounts</option>
+            {% for user in users %}
+            <option value="{{ user.id }}">{{ user.username }}</option>
+            {% endfor %}
+        </select>
+    <div id="requestButton" class="control-group">
+        <div>
+            <button type="submit" title="delete_account" class="ui button">Delete</button>
         </div>
     </div>
     </form>
