--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -97,6 +97,7 @@
                                 <li><a href="http://nycrecords.tumblr.com/"><img src="{{ url_for('static', filename='images/image004.gif') }}">  Tumblr</a></li>
                             </ul>
                         </li>
+                        {% if current_user.is_authenticated() %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration<span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -121,6 +122,7 @@
                                 {% endif %}
                             </ul>
                         </li>
+                        {% endif %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated() %}
