Changed navbar hover background-color css

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -70,7 +70,7 @@ form li {
 }
 
 .navbar-default .navbar-collapse li:hover {
-	background-color: #9e64b6;
+	background-color: #e0e1e2;
 }
 
 .navbar-default .navbar-collapse .dropdown-menu li a:hover {
