Added redirect page to error page when user profile is not found

--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -4,10 +4,10 @@
 {% block title %}Intranet - Error Page{% endblock %}
 
 {% block body %}
-<div class="page-header">
+<div class="well">
     <h2>Something went wrong...</h2>
 </div>
-<div id="page-body">
+<div class="well">
 	<h4>{{ message }}</h4>
 </div>
 {% endblock %}
