--- a/app/templates/edit_comment.html
+++ b/app/templates/edit_comment.html
@@ -11,6 +11,7 @@
     {% if current_user.can(Permission.COMMENT) %}
     <h3>Edit your comment</h3>
 		{{ wtf.quick_form(form) }}
+		<input action="action" type="button" value="Cancel" onclick="history.go(-1);" class="btn btn-primary" />
 	{% endif %}
 </div>
 {% endblock %}
