--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -101,9 +101,8 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                {% if current_user.role == 'Employee' %}
 
-                                {% elif current_user.role == 'Director' %}
+                                {% if current_user.role == 'Director' %}
 
                                 {% elif current_user.role == 'Administrator' %}
 
