--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -37,6 +37,7 @@
         <div id="requestButton" class="control-group">
             <div>
                 <button type="submit" title="submit_post" class="btn btn-primary">Submit</button>
+                <input action="action" type="button" value="Cancel" onclick="history.go(-1);" class="btn btn-primary" />
             </div>
         </div>
     </form>
