Added EEO Policy Addendum to EEO page

--- a/app/templates/eeo.html
+++ b/app/templates/eeo.html
@@ -12,6 +12,7 @@
 	<h4><b>EEO Information Files</b>
 	<br><br>
 	- <a href="{{ url_for('static', filename='files/NYC_EEO_Policy.pdf') }}">NYC EEO Policy</a><br>
+	- <a href="{{ url_for('static', filename='files/Addendum_to_the_EEO_Policy.pdf') }}">NYC EEO Policy Addendum</a><br>
 	- <a href="{{ url_for('static', filename='files/eeo_reasonable_accommodation.pdf') }}">EEO Reasonable Accommodation</a><br>
 	- <a href="{{ url_for('static', filename='files/eeo_discrimination_complaint_procedures.pdf') }}">EEO Discrimination Complaint Procedures</a><br>
 	- <a href="{{ url_for('static', filename='files/about_eeo_booklet.pdf') }}">About EEO Booklet</a><br>
