--- a/app/templates/tweets.html
+++ b/app/templates/tweets.html
@@ -6,7 +6,7 @@
 {% block body %}
 <div class="well">
     <h2>Recent Tweets</h2>
-    <h5>@nycrecords</h5>
+    <a href="https://twitter.com/nycrecords/"><h5>@nycrecords</h5></a>
 </div>
 
 <div class="well">
