--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -27,17 +27,15 @@
     <link rel="Shortcut Icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/x-icon">
 
     {% block css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     {% endblock %}
 
     {% block css_style %}
     {% endblock %}
 
     {% block js_top %}
-    <script src="{{ url_for('static', filename='js/vendor/modernizr-2.6.2.min.js') }}"></script>
+    <!--<script src="{{ url_for('static', filename='js/vendor/modernizr-2.6.2.min.js') }}"></script>-->
     {% endblock %}
 </head>
 <body style="padding-top: 20px; padding-bottom: 20px">
@@ -196,10 +194,10 @@
     -->
     {% set jquery_path = url_for('static', filename='js/vendor/jquery-1.10.2.min.js') %}
     <script>window.jQuery || document.write('<script src="{{ jquery_path }}"><\/script>')</script>
-    <script src="{{ url_for('static', filename='js/plugins.js') }}"></script>
+    <!--<script src="{{ url_for('static', filename='js/plugins.js') }}"></script>-->
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
-    <script src="{{ url_for('static', filename='js/vendor/bootstrap.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <!--<script src="{{ url_for('static', filename='js/vendor/bootstrap.js') }}"></script>-->
+    <!--<script src="{{ url_for('static', filename='js/main.js') }}"></script>-->
     {% endblock %}
 
     {% block ga %}
