--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
             <div class="control-group">
             <select name="select_tags" class="ui fluid search dropdown" multiple=" ">
                 <option value="">Tag Filter</option>
-                {% for tag in allTags %}
+                {% for tag in all_tags %}
                 <option value="{{ tag.name }}">{{ tag.name }}</option>
                 {% endfor %}
             </select>
