Added missing styles.css file

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -81,7 +81,7 @@
                                 <li><a href="http://www1.nyc.gov/site/olr/index.page">Employee Benefits</a></li>
                                 <li><a href="{{ url_for('main.eeo') }}">Equal Employment Opportunity</a></li>
                                 <li><a href="https://www.nycers.org/(S(m4z1oy554pem3oudryveam55))/index.aspx">NYCERS</a></li>
-                                <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml">Personal Service Bulletins</a></li>
+                                <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml">Personnel Service Bulletins</a></li>
                                 <li><a href="{{ url_for('main.agencypolicies') }}">Policies and Procedures</a></li>
                             </ul>
                         </li>
