Updated Application to use update authentication module
* Added authentication module created by @sarvard
* Update email functionality to use database to not rely on LDAP and use asynchronous message sending
* Removed migrations folder for debug purposes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,9 @@
         <li><a href="https://prod.citytime.nycnet/">CityTime</a></li>
         <li><a href="http://timeclock.records.nycnet/timeclock/">TimeClock</a></li>
         <li><a href="https://hrb.nycaps.nycnet/">NYCAPS</a></li>
+        {% if current_user.is_administrator %}
+
+        {% endif %}
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<span class="caret"></span></a>
             <ul class="dropdown-menu">
